--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
     background-size: cover;
   }
   
@@ -11,10 +12,6 @@ body {
     text-align: center;
   }
 
-  * {
-    box-sizing: border-box;
-  }
-  
   /* Style the header */
   .header {
     background-color: #f1f1f1;
@@ -22,33 +19,33 @@ body {
     text-align: center;
   }
   
-  /* Style the top navigation bar */
+    /* Style the top navigation bar */
   .topnav {
     overflow: hidden;
-    background-color: #333;
-    background-size: cover;
+    background-color: rgb(37, 37, 37);
+    background-size: cover; 
     color: white;    
   }
   
-  /* Style the topnav */
   .topnav a {
-    display: block;
+    float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 17px;
   }
-  
+
   /* Change color on hover */
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #E8B594;
+    color: #624722;
   }
   
-  /* Create three equal columns that floats next to each other */
+  /*  2 columns that floats next to each other */
   .column {
     float: left;
-    width: 33.33%;
+    width: 45%;
     padding: 15px;
   }
   
@@ -58,7 +55,84 @@ body {
     display: table;
     clear: both;
   }
+    /*-------------------------------------------------------------------------------------*/
+.bg-image {
+  /* Full height */
+  height: 50%; 
   
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Images used */
+.img1 { background-image: url("lezen.jpg"); }
+.img2 { background-image: url("webdesign.jpg"); }
+.img3 { background-image: url("tekenen.jpg"); }
+.img4 { background-image: url("games.jpg"); }
+.img5 { background-image: url("piano.jpg"); }
+.img6 { background-image: url("piano.jpg"); }
+
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  font-size: 80px;
+  border: 10px solid #f1f1f1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 300px;
+  padding: 20px;
+  text-align: center;
+}
+ /*-------------------------------------------------------------------------------------*/
+  .Ervaring {
+    background-size: cover;
+    height: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 150%;
+    font-weight: 650;
+    color: rgb(37, 37, 37);
+    padding: 80px;
+  }
+
+  input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
   /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
   @media screen and (max-width:600px) {
     .column {
@@ -68,7 +142,8 @@ body {
   
   /* Style the footer */
 .footer {
-    background-color: #f1f1f1;
+    background-color: rgb(37, 37, 37);
     padding: 10px;
     text-align: center;
+    color: white;
   }
